-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.11.0
-
None
-
4165d1605380e9ad15f3ddbf7c96151fd174ff34 (qt-creator/qt-creator/4.11)
I have a file that is 1301 lines long.
When I go to the top of the file, the scroll bar (on the right side) will move to the top.
When I click on a line within the displayed split, I see a black horizontal bar appear within the scroll bar indicating the relative location of the cursor within the display. Below is a picture of the black bar approximately in the middle of the scroll bar:
When I move to line 1227, line 1227 is in the middle of the split and I see the following. Notice that the black bar is outside the scroll bar. Since the line is in the middle of the split, I would expect the black bar to be in the middle of the scroll bar.
If I move the scroll bar to the bottom, line 1227 scrolls up and is approx 25% down from the top of the split (since the file end is line 1301). I think the correct behavior is that the black bar should be 25% down the scroll bar.
If I move the cursor to line 1228, the black bar disappears:
- replaces
-
QTCREATORBUG-20697 Markers on editor's scrollbar don't match displayed lines
-
- Closed
-
-
QTCREATORBUG-20617 [Reg 4.6->4.7] Scrollbar marks and handle diverge in longer documents
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-23660 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
292399,2 | Core: Fix rounding issue in highlight scrollbar | 4.11 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |