Core: Fix rounding issue in highlight scrollbar

Fixes: QTCREATORBUG-23660
Change-Id: Ifcaf4e705a0a037c58ffedf36605b3eecfc698de
Reviewed-by: Eike Ziller <eike.ziller@qt.io>